# gstreamer-example

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac
src/: .gitignore  Makefile.am  gstmyfilter.cpp  gstmyfilter.h  libcv-cuda.cu  libcv-cuda.h  libcv.cpp  libcv.h  process.cpp  process.h
